# coc_scoreboard

./: LICENSE
src/: clan.html  clan.js  index.html  main.html  scoreboard.html  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: api.rs  clash_of_stats.rs  credentials.rs  dev.rs  error.rs  events.rs  lib.rs  main.rs
src-tauri/src/coc_models/: clan_info.rs  login.rs  mod.rs  search.rs  window.rs
src-tauri/src/cos_models/: clan.rs  clan_history.rs  leaderboard_options.rs  leaderboards.rs  mod.rs  player.rs  player_history.rs  rankings.rs
src-tauri/src/models/: badge_urls.rs  clan.rs  clan_capital.rs  clan_search.rs  gold_pass.rs  icon_urls.rs  labels.rs  leagues.rs  location.rs  mod.rs  paging.rs  player.rs  rankings.rs  season.rs  war.rs  war_log.rs
src-tauri/src/util/: hash_tag_code_generator.rs  logic_long.rs  logic_long_to_code_converter_util.rs  mod.rs
