[package]
name = "scoreboard"
version = "0.0.1"
description = "Clash of Clans api scoreboard"
authors = ["spam"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5.2", features = [] }

[dependencies]
tauri = { version = "1.6.8", features = [ "updater", "api-all"] }
serde = { version = "1.0.203", features = ["serde_derive", "derive", "alloc", "rc"] }
serde_json = { version = "1.0.105", features = ["alloc"] }
tokio = { version = "1.32.0", features = ["full"] }
tracing = "0.1.40"
webbrowser = "1.0.1"
num-derive = "0.4.0"
futures = "0.3.30"
serde_repr = "0.1.16"
time = "0.3.28"
url = "2.4.1"
bson = "2.9.0"
reqwest = { version = "0.11.20", features = ["json", "cookies", "cookie_store"] }
thiserror = "1.0.47"
chrono = "0.4.28"
dashmap = "5.5.3"
anyhow = "1.0.75"
base64 = "0.21.3"
num-traits = "0.2.16"
parking_lot = "0.12.1"
rand = "0.8.5"
regex = "1.9.4"
urlencoding = "2.1.3"
lazy_static = "1.4.0"
actix-files = "0.6.6"
async-recursion = "1.1.0"
async-trait = "0.1.73"
levenshtein = "1.0.5"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
default = [
    "cos",
    "extra",
    "tracing",
]
cos = []
extra = []
tracing = []
